[FIX] crm,web: expected revenue field is too short
Current behaviour:
Expected Revenue field is 8 characters long

Expected behaviour:
Field is 13 characters long in 17.0

Steps to reproduce:
1. Go to CRM
2. Create a new opportunity
3. Expected Revenue field is 8ch long

Fix:
Backport of:
https://github.com/odoo/odoo/commit/cdde6575e46280d23837145c711d065901a3b001
https://github.com/odoo/odoo/commit/b47f73bf4ec14d5d95ea567fc62ce05c58ea58a3

opw-3624844

closes odoo/odoo#146696

X-original-commit: 5b155104681b61573dd8cdfce2c6b130cc7a14be

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -98,7 +98,7 @@
         @extend .oe_inline;
         float: right!important;
     }
-    @for $i from 2 through 12 {
+    @for $i from 2 through 13 {
         .o_field_widget.o_input_#{$i}ch input{
             width: 1ch * $i !important;
         }
